Fix header menu overflow
  - the size of the logo in the header was causing the links in the
  header to overflow outside of the page grid resulting in odd behavior
  in reactiveness.
  - added new header logo for the header menu
  - don't wrap contents of navbar in a container

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,11 +8,10 @@
 @import "events";
 @import "fellows";
 
-html,
-
 body {
     font-family: canada-type-gibson, sans-serif;
 }
+
 
 h1,
 h2,
